--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/cpputil"]
 	path = lib/cpputil
 	url = git@github.com:4ms/cpputil
+[submodule "lib/printf"]
+	path = lib/printf
+	url = https://github.com/mpaland/printf.git
