Updated submodule lib/cpputil

--- a/src/f723-drivers/CMakeLists.txt
+++ b/src/f723-drivers/CMakeLists.txt
@@ -23,24 +23,39 @@ set(TARGET_INCLUDES
 )
 
 set(TARGET_SOURCES
-    ${root}/lib/mdrivlib/drivers/sdram.cc
+    ${root}/src/f723-drivers/flash.cc
     ${root}/lib/mdrivlib/drivers/hal_handlers.cc
-    # ${root}/lib/mdrivlib/target/stm32f7xx/drivers/sai_tdm.cc
-    # ${root}/lib/mdrivlib/target/stm32f7xx/drivers/interrupt_handler.cc
-    # ${root}/lib/mdrivlib/target/stm32f7xx/boot/startup.s ${root}/lib/mdrivlib/target/stm32f7xx/boot/system_init.c
+    ${root}/lib/mdrivlib/drivers/sdram.cc
+    ${root}/lib/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.c
+    ${root}/lib/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.c
 )
 
 set(WAV_ENCODE_PYTHON_CMD
-    # Note: flash sector size is 128kB, but we arbitrarily limit app size with
-    # -g in order to
-    # make the  wave file shorter
     # cmake-format: off
-  python ${CMAKE_SOURCE_DIR}/src/bootloader/stm_audio_bootloader/fsk/encoder.py -s 22050 -b 16 -n 8 -z 4 -p 256 -g 40960 -k 1000 $<TARGET_FILE_DIR:${target}.elf>/${target}.bin
-  # cmake-format: on
+    python3 ${CMAKE_SOURCE_DIR}/src/bootloader/stm_audio_bootloader/qpsk/encoder.py -s 48000 -b 12000 -c 6000 -p 256 -t stm32f4 -a 3 -g 131072 $<TARGET_FILE_DIR:${target}.elf>/${target}.bin
+    # cmake-format: on
 )
 
 set_hal_sources(HAL_SOURCES stm32f7)
 create_target(${target} stm32f7xx)
 
-set(TARGET_BOOTLOADER_SOURCES)
+set(TARGET_BOOTLOADER_SOURCES
+    ${root}/lib/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.c
+    ${root}/lib/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.c
+    ${root}/src/bootloader/f723/flash.cc
+    ${root}/lib/mdrivlib/drivers/hal_handlers.cc
+)
+set(TARGET_BOOTLOADER_INCLUDES
+    ${root}/src/bootloader/f723
+    ${root}/lib/brainboard/f723
+    ${root}/lib/mdrivlib/target/stm32f7xx
+    ${root}/lib/mdrivlib/target/stm32f723
+    ${root}/lib/CMSIS/Device/ST/STM32F7xx/Include
+    ${root}/lib/STM32F7xx_HAL_Driver/Inc
+)
+
 set(TARGET_BOOTLOADER_LINK_SCRIPT ${CMAKE_SOURCE_DIR}/linker/STM32F723IETx_FLASH_BOOTLOADER.ld)
+
+# TODO: move set_..._hal_sources() to inside create_target
+set_bootloader_hal_sources(BOOTLOADER_HAL_SOURCES stm32f7)
+create_bootloader_target(${target} stm32f7xx)
