CI installs ninja

--- a/.github/workflows/build_test_firmware.yml
+++ b/.github/workflows/build_test_firmware.yml
@@ -41,6 +41,9 @@ jobs:
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
           cmake-version: '3.26.x'
+
+      - name: Install Ninja
+        run: sudo apt-get install ninja-build 
           
       - name: Git setup
         run: git config --global --add safe.directory '*'
