--- a/.github/workflows/build_test_firmware.yml
+++ b/.github/workflows/build_test_firmware.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   build-lin:
-    if: ${{ inputs.linux_x64 }}
+    if: ${{ inputs.linux_x64 || startsWith(github.ref, 'refs/tags/v') }}
     strategy:
         matrix:
           gcc: ['12.2.Rel1']  # can add other versions if needed
