--- a/.github/workflows/build_test_firmware.yml
+++ b/.github/workflows/build_test_firmware.yml
@@ -54,7 +54,7 @@ jobs:
           submodules: 'recursive'
 
       - name: Build and test
-        run: cmake -B build -G Ninja -DBRAINBOARD_MP15x=ON && cmake --build build
+        run: cmake -B build -G Ninja -DBRAINBOARD_MP15x=ON && cmake --build build && make combo
 
       - name: Set Release Version
         if: startsWith(github.ref, 'refs/tags/v')
@@ -101,5 +101,5 @@ jobs:
           token: ${{ secrets.CHECKOUT_TOKEN }}
 
       - name: Build and test
-        run: cmake -B build -G Ninja -DBRAINBOARD_MP15x=ON && cmake --build build
+        run: cmake -B build -G Ninja -DBRAINBOARD_MP15x=ON && cmake --build build && make combo
 
